Refactor GitHub Actions for Next.js deployment

--- a/.github/workflows/master_nextjs-app-random.yml
+++ b/.github/workflows/master_nextjs-app-random.yml
@@ -1,53 +1,76 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - nextjs-app-random
+# .github/workflows/nextjs-deploy.yml
+name: Build & Deploy Next.js (standalone)
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
   workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      # Use Node 20 LTS (Azure supports it, 24.x is still experimental)
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '24.x'
+          node-version: '20'
+          cache: 'npm'
 
-      - name: npm install, build, and test
+      - name: Install & Build
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm ci
+          npm run build
 
-      - name: Upload artifact for deployment job
+      # -------------------------------------------------
+      # 1. Create a tiny deploy folder (only standalone)
+      # -------------------------------------------------
+      - name: Prepare standalone package
+        run: |
+          mkdir -p deploy
+          # Core server files
+          cp -r .next/standalone/* deploy/
+          # Static assets (required for images, _next/static, etc.)
+          mkdir -p deploy/.next
+          cp -r .next/static deploy/.next/static
+          # Public folder (if you have one)
+          if [ -d public ]; then cp -r public deploy/; fi
+          # package.json so Azure can run npm start
+          cp package.json deploy/
+
+      # -------------------------------------------------
+      # 2. Zip it (Azure loves ZIPs, < 250 MB is fast)
+      # -------------------------------------------------
+      - name: Create ZIP
+        run: |
+          cd deploy
+          zip -r ../deploy.zip .
+          cd ..
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: nextjs-standalone
+          path: deploy.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+      id-token: write
+      contents: read
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-      
+          name: nextjs-standalone
+          path: .
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +78,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F44F242E66FB441EB6E6F89627E9A7AA }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E3DED6DF18244C7E99D0A84C6E51C7A0 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'nextjs-app-random'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: nextjs-app-random
+          slot-name: Production
+          package: deploy.zip   # <-- the tiny zip
